--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 body {
-    margin: 0;
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +6,7 @@ body {
     background: linear-gradient(45deg, #0e293b, #281331);
     font-family: 'Roboto', Arial, sans-serif;
     position: relative;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 body::before {
@@ -38,7 +36,6 @@ body::before {
 }
 
 .container {
-    margin: 20px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 20px;
     backdrop-filter: blur(10px);
